[tool]
[tool.poetry]
name = "hav"
version = "0.5.0"
description = "The Himalaya Archive Vienna."
authors = [
    "Sean McAllister <sean@brickwall.at>",
    "Jürgen Schörlfinger <juergen.schoerflinger@univie.ac.at>"
]
packages = [
 { include = "hav", from = "src" },
]

requires-poetry = ">=2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[tool.poetry.dependencies]
aniso8601 = "^10"
channels = "^4.1"
channels-redis = "*"
colorama = "*"
cryptography = "^46"
daphne = "^4.1"
dj-database-url = "*"
django = "^4.2"
django-cors-headers = "*"
django-environ = "^0.12"
django-model-utils = "^5"
django-redis = "*"
django-rq = "*"
django-treebeard = "^4.5.1"
django-webpack-loader = "==1.4.1"
djangorestframework = "^3.15"
graphene-django = "*"
hashids = "^1.3.1"
imageio = "^2.16.1"
ipython = "*"
markdown-it-py = {extras = ["plugins"], version = "^2.2.0"}
meilisearch = "^0.31"
pick = "*"
pillow = "*"
pip = "*"
psycopg2 = "*"
pycountry = "*"
pydantic = "^2.8"
pyexiftool = {git = "https://github.com/whav/pyexiftool.git", branch = "master"}
pylint = "*"
python = ">=3.11,<4.0"
python-dotenv = "==0.7.1"
pyvips = "^2.1.15"
rawpy = "^0.22.0"
redis = "^4.3.0"
requests = "*"
sentry-sdk = "*"
uwsgi = "*"
whitenoise = "*"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*"
django-extensions = "^4.1"
ipdb = "*"
pytest = "*"
pytest-django = "*"
black = "^26"
jedi = "*"
pre-commit = "^4.5"
