
[tool]
[tool.poetry]
name = "hav_backend"
version = "0.1.0"
description = "The code of the HAV."
authors = [
    "Sean McAllister <sean@brickwall.at>"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
channels = "*"
channels-redis = "*"
dj-database-url = "*"
django = ">3;<4"
django-cors-headers = "*"
django-environ = "==0.4.4"
django-extensions = "==2.1.5"
django-model-utils = "^4.1.1"
django-redis = "*"
django-rq = "*"
django-treebeard = "^4.5.1"
django-webpack-loader = "==0.5.0"
djangorestframework = "^3.11"
graphene-django = "*"
ipython = "*"
pick = "*"
pillow = "*"
pip = "*"
psycopg2 = "*"
pycountry = "*"
pyexiftool = {git = "https://github.com/whav/pyexiftool.git"}
pylint = "*"
python-dotenv = "==0.7.1"
pyvips = "*"
redis = "==3.0.1"
requests = "*"
sentry-sdk = "*"
uwsgi = "*"
whitenoise = "*"
meilisearch = "^0.14.0"
pydantic = "^1.7.3"
rawpy = "^0.16.0"
imageio = "^2.9.0"
hashids = "^1.3.1"
django-tailwind = "^2.2.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
ipdb = "*"
pytest = "*"
pytest-django = "*"
black = {version = "^20.8b1", allow-prereleases = true}
jedi = "0.17.2"
